# 3dRadiation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Readme.txt  job.sh  jobIboga.sh  test.cpp
exe/: benchmark.cpp  bigFunctionsTest.cpp  blackHoleImage.cpp  dataTypesTest.cpp  geodesicEquationSolverTest.cpp  gridTest.cpp  interpolationTest.cpp  main.cpp  meshTest.cpp  metricTest.cpp  myMathTest  myMathTest.cpp  stencilTest.cpp  test.cpp
src/: AdvancedMath.cpp  AdvancedMath.h  Camera.cpp  Camera.h  Config.hh  ControlFlow.hh  ConvexHull.cpp  ConvexHull.h  DataTypes.hh  GeodesicEquationSolver.cpp  GeodesicEquationSolver.h  Grid.cpp  Grid.h  Includes.hh  Interpolation.cpp  Interpolation.h  Interpolation.hh  InterpolationGrid.cpp  InterpolationGrid.h  Log.hh  Logger.hh  Mesh.cpp  Mesh.h  Metric.cpp  Metric.h  Profiler.hh  Radiation.cpp  Radiation.h  Radiation2.cpp  Radiation2.h  Radiation3.cpp  Radiation3.h  RotateSphericalCoordinates.h  Spacetimes.cpp  Spacetimes.h  SpecialMath.cpp  SpecialMath.h  SphereGrid.cpp  SphereGrid.h  SphericalHarmonics.cpp  (+17 more)
src/GaussLegendreStencil/: GaussLegendreStencil10  GaussLegendreStencil11  GaussLegendreStencil12  GaussLegendreStencil13  GaussLegendreStencil14  GaussLegendreStencil15  GaussLegendreStencil16  GaussLegendreStencil17  GaussLegendreStencil18  GaussLegendreStencil19  GaussLegendreStencil2  GaussLegendreStencil20  GaussLegendreStencil3  GaussLegendreStencil5  GaussLegendreStencil6  GaussLegendreStencil7  GaussLegendreStencil8  GaussLegendreStencil9
src/LebedevStencil/: LebedevStencil11  LebedevStencil13  LebedevStencil15  LebedevStencil3  LebedevStencil5  LebedevStencil7  LebedevStencil9
src/LebedevStencil/sphericalquadpy/: CreateStencil.py  test.py
src/sphericalquadpy/: CreateGaussLegendreStencil.py  CreateLebedevStencil.py  test.py
stencils/: CodeGenerator.py
stencils/GaussLegendreStencil/: GaussLegendreStencil1  GaussLegendreStencil11  GaussLegendreStencil13  GaussLegendreStencil15  GaussLegendreStencil17  GaussLegendreStencil19  GaussLegendreStencil21  GaussLegendreStencil23  GaussLegendreStencil25  GaussLegendreStencil27  GaussLegendreStencil29  GaussLegendreStencil3  GaussLegendreStencil31  GaussLegendreStencil33  GaussLegendreStencil35  GaussLegendreStencil37  GaussLegendreStencil39  GaussLegendreStencil4  GaussLegendreStencil41  GaussLegendreStencil5  GaussLegendreStencil7  GaussLegendreStencil9
stencils/LebedevStencil/: LebedevStencil11  LebedevStencil13  LebedevStencil15  LebedevStencil17  LebedevStencil19  LebedevStencil21  LebedevStencil23  LebedevStencil23.24  LebedevStencil25  LebedevStencil27  LebedevStencil29  LebedevStencil3  LebedevStencil31  LebedevStencil35  LebedevStencil41  LebedevStencil47  LebedevStencil5  LebedevStencil53  LebedevStencil59  LebedevStencil7  LebedevStencil9
stencils/sphericalquadpy/: CreateGaussLegendreStencil.py  CreateLebedevStencil.py
tests/: BigFunctionsTest.cpp  GeodesicEquationSolverTest.cpp  GridTest.cpp  InterpolationTest.cpp  MeshTest.cpp  MetricTest.cpp  MyMathTest.cpp  StencilTest.cpp  TensorTypesTest.cpp  bigFunctionsTest.cpp  blankTest.cpp  geodesicEquationSolverTest.cpp  interpolationTest.cpp  main.cpp  meshTest.cpp  metricTest.cpp  quaternionTest.cpp  stencilTest.cpp  tensorTypesTest.cpp  test.cpp
